[project]
name = "axio_common"
version = "0.2.4"
description = "Shared models and utilities for Axio backend services."
authors = [{ name = "Stephen Houston", email = "stephen.houston@axioforce.com" }]
dependencies = [
    "dotenv",
    "pydantic>=2.0.0",
    "SQLAlchemy>=2.0.0",
    "psycopg2-binary",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.bumpversion]
current_version = "0.2.4"
commit = true
tag = true
